# SmartPL1

./: CMakeLists.txt  IPM.cpp  ImageProcessor.cpp  ImageProcessor.h  README.md  main.cpp
Points/destination/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
Points/origin/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
img_process/: parking_space.txt
